overflow fix wordwrap

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-wrap: anywhere;
+  word-break: break-word; /* for older browsers */
   background: var(--background);
   color: var(--foreground);
   font-family:
